--- a/Social_App/Base.lproj/Main.storyboard
+++ b/Social_App/Base.lproj/Main.storyboard
@@ -298,18 +298,59 @@
                                     <constraint firstAttribute="width" constant="100" id="x31-PD-E9N"/>
                                 </constraints>
                             </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DLa-zE-iuq">
+                                <rect key="frame" x="20" y="229" width="560" height="322"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="0.0" id="qYZ-bu-aEN">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="Y5V-pT-hS2" customClass="CollectionViewCell" customModule="Social_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7ig-Br-p0e">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="7ig-Br-p0e" firstAttribute="leading" secondItem="Y5V-pT-hS2" secondAttribute="leadingMargin" constant="-8" id="ZIh-9s-cMh"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="7ig-Br-p0e" secondAttribute="trailing" constant="-8" id="kwY-5d-N6F"/>
+                                            <constraint firstItem="7ig-Br-p0e" firstAttribute="top" secondItem="Y5V-pT-hS2" secondAttribute="topMargin" constant="-8" id="trZ-TN-tZb"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="7ig-Br-p0e" secondAttribute="bottom" constant="-8" id="yNO-oA-Ijz"/>
+                                        </constraints>
+                                        <size key="customSize" width="100" height="100"/>
+                                        <connections>
+                                            <outlet property="image" destination="7ig-Br-p0e" id="far-5Y-bTm"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="iV3-QT-NbS" firstAttribute="top" secondItem="Zy0-q9-pRY" secondAttribute="bottom" constant="45" id="7YG-E3-BG2"/>
+                            <constraint firstItem="DLa-zE-iuq" firstAttribute="leading" secondItem="GdF-eI-DJA" secondAttribute="leadingMargin" id="9q6-M0-TF9"/>
+                            <constraint firstItem="DLa-zE-iuq" firstAttribute="top" secondItem="iV3-QT-NbS" secondAttribute="bottom" constant="20" id="GuF-Cj-O38"/>
                             <constraint firstItem="xTO-6a-Rhy" firstAttribute="top" secondItem="iV3-QT-NbS" secondAttribute="top" id="JYw-RJ-lq1"/>
                             <constraint firstItem="xTO-6a-Rhy" firstAttribute="leading" secondItem="iV3-QT-NbS" secondAttribute="trailing" constant="33" id="SAb-bg-Bww"/>
                             <constraint firstItem="xTO-6a-Rhy" firstAttribute="trailing" secondItem="GdF-eI-DJA" secondAttribute="trailingMargin" id="dQN-Zr-03l"/>
                             <constraint firstItem="xTO-6a-Rhy" firstAttribute="top" secondItem="Zy0-q9-pRY" secondAttribute="bottom" constant="45" id="eAf-me-eZT"/>
+                            <constraint firstItem="DLa-zE-iuq" firstAttribute="trailing" secondItem="GdF-eI-DJA" secondAttribute="trailingMargin" id="naZ-5L-NT6"/>
                             <constraint firstItem="iV3-QT-NbS" firstAttribute="leading" secondItem="GdF-eI-DJA" secondAttribute="leadingMargin" constant="28" id="pGm-fE-wdm"/>
+                            <constraint firstItem="iVB-sF-DLW" firstAttribute="top" secondItem="DLa-zE-iuq" secondAttribute="bottom" id="vdv-6S-0qR"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="photoCollection" destination="DLa-zE-iuq" id="Bqn-w9-Gtg"/>
                         <outlet property="profileImg" destination="iV3-QT-NbS" id="Y9v-0K-J4t"/>
                         <outlet property="usernameLbl" destination="xTO-6a-Rhy" id="iFe-x8-qKK"/>
                     </connections>
@@ -425,25 +466,25 @@
                                     <constraint firstAttribute="width" constant="100" id="YOM-0d-FNh"/>
                                 </constraints>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="za4-Fo-YIp">
-                                <rect key="frame" x="0.0" y="180" width="600" height="371"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="za4-Fo-YIp">
+                                <rect key="frame" x="20" y="180" width="560" height="371"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="wJY-Re-VLR">
-                                    <size key="itemSize" width="135" height="127"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="0.0" id="wJY-Re-VLR">
+                                    <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="gRG-mQ-Zmc" customClass="CollectionViewCell" customModule="Social_App" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="135" height="127"/>
+                                    <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="gRG-mQ-Zmc" customClass="CollectionViewCell" customModule="Social_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="135" height="127"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t0b-We-rDd">
-                                                    <rect key="frame" x="0.0" y="0.0" width="135" height="127"/>
+                                                <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t0b-We-rDd">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -454,6 +495,7 @@
                                             <constraint firstAttribute="bottomMargin" secondItem="t0b-We-rDd" secondAttribute="bottom" constant="-8" id="TPJ-p8-Llw"/>
                                             <constraint firstItem="t0b-We-rDd" firstAttribute="top" secondItem="gRG-mQ-Zmc" secondAttribute="topMargin" constant="-8" id="Vc7-vk-zYB"/>
                                         </constraints>
+                                        <size key="customSize" width="100" height="100"/>
                                         <connections>
                                             <outlet property="image" destination="t0b-We-rDd" id="cx0-iM-QkV"/>
                                         </connections>
@@ -464,19 +506,19 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Mol-ha-g82" firstAttribute="trailing" secondItem="Hg5-Gu-PXm" secondAttribute="trailingMargin" id="2RB-nZ-107"/>
-                            <constraint firstItem="za4-Fo-YIp" firstAttribute="leading" secondItem="Hg5-Gu-PXm" secondAttribute="leadingMargin" constant="-20" id="6XK-SI-EO2"/>
+                            <constraint firstItem="za4-Fo-YIp" firstAttribute="leading" secondItem="Hg5-Gu-PXm" secondAttribute="leadingMargin" id="6XK-SI-EO2"/>
                             <constraint firstItem="SaI-XA-jYA" firstAttribute="top" secondItem="za4-Fo-YIp" secondAttribute="bottom" id="B7H-45-4Yf"/>
                             <constraint firstItem="Mol-ha-g82" firstAttribute="top" secondItem="BgE-X6-ctw" secondAttribute="bottom" constant="40" id="Epm-nW-if2"/>
                             <constraint firstItem="b69-V1-yVm" firstAttribute="leading" secondItem="Hg5-Gu-PXm" secondAttribute="leadingMargin" id="Sai-H3-dS9"/>
                             <constraint firstItem="za4-Fo-YIp" firstAttribute="top" secondItem="b69-V1-yVm" secondAttribute="bottom" constant="20" id="i0a-hO-rEd"/>
                             <constraint firstItem="Mol-ha-g82" firstAttribute="leading" secondItem="b69-V1-yVm" secondAttribute="trailing" constant="25" id="r52-CW-vCc"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="za4-Fo-YIp" secondAttribute="trailing" constant="-20" id="uB3-lb-WQl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="za4-Fo-YIp" secondAttribute="trailing" id="uB3-lb-WQl"/>
                             <constraint firstItem="b69-V1-yVm" firstAttribute="top" secondItem="BgE-X6-ctw" secondAttribute="bottom" constant="40" id="vvU-v7-pLc"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="profileimg" id="ekS-Fa-CbZ"/>
                     <connections>
-                        <outlet property="photoCollectionCell" destination="za4-Fo-YIp" id="Xf9-Nn-igO"/>
+                        <outlet property="photoCollection" destination="za4-Fo-YIp" id="sIP-Ds-Jnn"/>
                         <outlet property="profileImage" destination="b69-V1-yVm" id="dmI-jX-sXb"/>
                         <outlet property="usernameLbl" destination="Mol-ha-g82" id="okF-c1-GfN"/>
                     </connections>
