--- a/Social_App/Base.lproj/Main.storyboard
+++ b/Social_App/Base.lproj/Main.storyboard
@@ -392,7 +392,7 @@
                                             <action selector="makePost:" destination="cHE-5e-1V3" eventType="touchUpInside" id="qMY-lR-6zN"/>
                                         </connections>
                                     </button>
-                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="instagram1" translatesAutoresizingMaskIntoConstraints="NO" id="SkE-7Z-7Vc">
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SkE-7Z-7Vc">
                                         <rect key="frame" x="155" y="50" width="250" height="250"/>
                                         <gestureRecognizers/>
                                         <constraints>
@@ -403,12 +403,24 @@
                                             <outletCollection property="gestureRecognizers" destination="QL6-Hw-0UV" appends="YES" id="QNK-bL-ZXD"/>
                                         </connections>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Image" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AYI-Px-KVw">
+                                        <rect key="frame" x="224" y="155" width="113" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="113" id="O9Q-oO-StD"/>
+                                            <constraint firstAttribute="height" constant="40" id="fFH-7L-Aqy"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="SkE-7Z-7Vc" firstAttribute="top" secondItem="cdY-Yv-x9u" secondAttribute="top" constant="50" id="8MR-Hn-oUO"/>
                                     <constraint firstItem="iLz-Z6-n0r" firstAttribute="centerX" secondItem="cdY-Yv-x9u" secondAttribute="centerX" id="FA6-C6-szL"/>
                                     <constraint firstItem="LUo-sJ-t9i" firstAttribute="top" secondItem="iLz-Z6-n0r" secondAttribute="bottom" constant="8" id="GX9-l2-ZWM"/>
+                                    <constraint firstItem="AYI-Px-KVw" firstAttribute="centerX" secondItem="SkE-7Z-7Vc" secondAttribute="centerX" id="K0G-K4-dff"/>
+                                    <constraint firstItem="AYI-Px-KVw" firstAttribute="centerY" secondItem="SkE-7Z-7Vc" secondAttribute="centerY" id="P8d-cS-jJY"/>
                                     <constraint firstItem="SkE-7Z-7Vc" firstAttribute="centerX" secondItem="cdY-Yv-x9u" secondAttribute="centerX" id="SZN-7V-Jvq"/>
                                     <constraint firstItem="LUo-sJ-t9i" firstAttribute="centerX" secondItem="cdY-Yv-x9u" secondAttribute="centerX" id="wpd-xb-Ohj"/>
                                     <constraint firstItem="iLz-Z6-n0r" firstAttribute="top" secondItem="SkE-7Z-7Vc" secondAttribute="bottom" constant="8" id="zIm-u8-gDt"/>
@@ -426,6 +438,7 @@
                     <tabBarItem key="tabBarItem" title="Add Image" image="Camera-50" id="Gwg-FD-DKn"/>
                     <connections>
                         <outlet property="imageSelectorBG" destination="SkE-7Z-7Vc" id="97e-HS-qRU"/>
+                        <outlet property="imagelabel" destination="AYI-Px-KVw" id="iPX-uu-Kvc"/>
                         <outlet property="postField" destination="iLz-Z6-n0r" id="6EZ-Fi-pyg"/>
                     </connections>
                 </viewController>
@@ -557,7 +570,7 @@
                                     <action selector="createUser:" destination="0SD-ql-XpZ" eventType="touchUpInside" id="0ir-ud-BE7"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5KM-2U-3Qf">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5KM-2U-3Qf">
                                 <rect key="frame" x="225" y="161" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="sIz-vK-30t"/>
@@ -590,6 +603,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="buttonLabel" destination="4rW-kW-ziP" id="pGi-Y0-uO2"/>
                         <outlet property="profileImage" destination="5KM-2U-3Qf" id="taY-m5-tN2"/>
                         <outlet property="userNameLbl" destination="1Ik-tQ-P1N" id="au9-zf-QAK"/>
                         <segue destination="SdD-sB-0zO" kind="show" identifier="loggedInWithUsername" id="q1P-8b-tdZ"/>
@@ -643,7 +657,6 @@
         <image name="Camera-50" width="25" height="25"/>
         <image name="Home-50" width="25" height="25"/>
         <image name="heart-empty" width="150" height="147"/>
-        <image name="instagram1" width="512" height="512"/>
         <image name="profileimg" width="24" height="24"/>
     </resources>
 </document>
